examples/valid/program26.c
int multiply(int x, int y) {
    return x * y;
}

int main(void) {
    int a;
    int b;
    int product;
    a = 7;
    b = 6;
    product = multiply(a, b);
    return product;
}

